--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html>
+<html lang="pt_BR">
 <head>
     <meta charset="UTF-8">
     <title>Negociações</title>
-    <link rel="stylesheet" href="css/bootstrap.css">
-    <link rel="stylesheet" href="css/bootstrap-theme.css">
+    <link rel="stylesheet" href="app/css/bootstrap.css">
+    <link rel="stylesheet" href="app/css/bootstrap-theme.css">
 </head>
 
 <body class="container">
@@ -39,11 +39,11 @@
 
     <div id="negociacoesView"></div>
 
-    <script src="lib/jquery.min.js"></script>
-    <script src="lib/system.js"></script>
+    <script src="app/lib/jquery.min.js"></script>
+    <script src="app/lib/system.js"></script>
     <script>
         System.defaultJSExtensions = true
-        System.import('js/app.js').catch(err => console.error(err))
+        System.import('app/js/app.js').catch(err => console.error(err))
     </script>
     
 </body>
